Fix `prefers-color-scheme: dark` having unreadable source listings
By forcing the background to light.  Which, isn't the best fix, but
it's better than nothing, as coderay doesn't seem to have any dark
mode css I can just include to fix this instead.

--- a/source/stylesheets/coderay.css
+++ b/source/stylesheets/coderay.css
@@ -1,5 +1,22 @@
+/* TODO: coderay doesn't seem to have a dark mode css? */
+@media (prefers-color-scheme: light) {
+  .CodeRay {
+    background-color: var(--b-bg-2);
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .CodeRay {
+    background-color: hsl(0,0%,95%);
+  }
+  pre.CodeRay {
+    background-color: hsl(0,0%,95%);
+  }
+  pre.CodeRay > code {
+    background-color: hsl(0,0%,95%);
+  }
+}
+
 .CodeRay {
-  background-color: hsl(0,0%,95%);
   border: 1px solid silver;
   color: black;
 }
