--- a/source/stylesheets/post.css.sass
+++ b/source/stylesheets/post.css.sass
@@ -4,9 +4,6 @@
 $text-font: 'Open Sans', sans-serif
 $code-font: 'Inconsolata', monospace
 
-.CodeRay
-  background-color: var(--b-bg-2) !important
-
 body
   display: grid
   font-family: $text-font
